--- a/index.html
+++ b/index.html
@@ -3,20 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Custom Select</title>
     <meta name="author" content="Fernando de Barros">
+    <title>Custom Select</title>
+    <link rel="stylesheet" type="text/css" href="src/css/style.css">
 </head>
 <body>
     <div class="wrapper">
         <div class="select-container">
-            <span class="select-value">Teste</span>
+            <span class="select-value"></span>
             <ul class="select-list">
-                <li class="select-item" id="selected">Rio Grande do Sul</li>
-                <li class="select-item">Paraná</li>
-                <li class="select-item">Minas Gerais</li>
-                <li class="select-item">Tocantins</li>
+                <li class="select-item disabled">Selecione um jogo</li>
+                <li class="select-item">Minecraft</li>
+                <li class="select-item">League of Legends</li>
+                <li class="select-item">Valorant</li>
+                <li class="select-item">Fallout</li>
+                <li class="select-item">Counter Strike</li>
+                <li class="select-item">Fall Guys</li>
+                <li class="select-item">Stumble Guys</li>
+                <li class="select-item">Hytale</li>
+                <li class="select-item">Poppy Playtime 1</li>
+                <li class="select-item">Poppy Playtime 2</li>
+                <li class="select-item">Poppy Playtime 3</li>
+                <li class="select-item">FNAF</li>
+                <li class="select-item">Clash Royale</li>
+                <li class="select-item">Brawl Stars</li>
+                <li class="select-item">Clash of Clans</li>
+                <li class="select-item">Hay Day</li>
             </ul>
         </div>
     </div>
+    <script src="src/script.js"></script>
 </body>
 </html>
