--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
             </ul>
         </div>
     </div>
-    <script src="src/script.js"></script>
+    <script src="src/script.js" type="module"></script>
 </body>
 </html>
